--- a/index.css
+++ b/index.css
@@ -114,7 +114,7 @@ body {
     justify-content: space-around;
 }
 
-.contenidoPrincipal img{
+.contenidoPrincipal .Portada{
 	width: 99%;
 	box-shadow: 6px 6px 6px #000000;
 }
@@ -123,6 +123,77 @@ body {
 	font-family: 'Inter',Arial,sans-serif;
 	margin: 40px;
 	font-size: 40px;
+}
+
+.containersPrincipal{
+	/*width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-family: sans-serif;*/
+	display: flex;
+    flex-wrap: wrap;
+	
+}
+
+.containers{
+	width: 100%;
+	display: flex;
+	/*max-width: 2000px;*/
+}
+
+.card{
+	width: 27%;
+	margin: 20px;
+	border-radius: 6px;
+	overflow: hidden;
+	background: #ffffff;
+	box-shadow: 0px 1px 10px #a8a8a8;
+	cursor: default;
+	transition: all 400ms ease;
+}
+
+.card:hover{
+	box-shadow: 5px 5px 20px #000000;
+	transform: translateY(-3%);
+}
+
+.card img{
+	width: 100%;
+	height: 210px ;
+}
+
+.card .contenido{
+	padding: 15px;
+	text-align: center;
+
+}
+
+.card .contenido p{
+	line-height: 1.5;
+	color: #000000;
+}
+
+.card .contenido h3{
+	font-weight: 400;
+	margin-bottom: 15px;
+}
+
+.card .contenido a{
+	text-decoration: none;
+	display: inline-block;
+	padding: 10px;
+	margin-top: 10px;
+	color: #e2a62d;
+	border: 1px solid #e2a62d;
+	border-radius: 4px;
+	transition: all 400ms ease;
+}
+
+.card .contenido a:hover{
+	background: #e2a62d;
+	color: #ffffff;
 }
 
 footer{
